--- a/public/css/question.css
+++ b/public/css/question.css
@@ -19,11 +19,17 @@ body {
 #question {
     position: relative;
     margin: 0 15%;
-    background-color: white;
+    background-color: bisque;
     border: 1px solid gray;
     border-radius: 8px;
     min-height: 50vh;
     z-index: 1;
+}
+#question #content {
+    padding: 16px;
+    color: black;
+    background-color: transparent;
+    font-weight: 500;
 }
 /* SECTION clock */
 #clock {
@@ -122,6 +128,7 @@ body {
 /* SECTION particle */
 #particle-canvas {
     position: absolute;
+    top: 0;
     width: 100%;
     height: 100%;
 }
