--- a/public/css/question.css
+++ b/public/css/question.css
@@ -173,6 +173,18 @@ canvas {
     border-radius: 5px;
     border: 2px solid yellow;
 }
+.number {
+    position: absolute;
+    padding: 10px;
+    background-color: aliceblue;
+    top: -25px;
+    left: -25px;
+    height: 20px;
+    width: 20px;
+    text-align: center;
+    border-radius: 50%;
+    border: 3px solid #e1b632;
+}
 
 @media (max-width: 986px) {
     .container {
@@ -182,7 +194,7 @@ canvas {
         text-align: center;
     }
     #question {
-        margin: 0 2%;
+        margin: 0 7%;
     }
     form {
         padding: 0 10px;
